# digit-sum-prediction

./: .gitignore  ASSIGNMENT.md  README.md  eval_all.sh  inference.py  main.py  pyproject.toml  test.py  train_multihead.sh  visualize_ablations.py
results/MultiBranchCNN_k5_7_avg_unweighted/: confusion_matrix.npy  metrics.json
results/multihead_full_val/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_aug_test/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_aug_val/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_k3_test/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_k3_val/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_k5_test/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_k5_val/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_sum05_test/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_sum05_val/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_sum10_test/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_sum10_val/: confusion_matrix.npy  metrics.json  predictions.npz
results/multihead_resnet_test/: metrics.json  (+2 more)
scripts/: create_final_split.py  create_full_dataset.py  plot_ablations.py
src/: baseline.py  loops.py  multibranch.py  multihead.py  test_multihead.py  test_spatial_attention.py  train.py  train_multihead.py  train_spatial_attention.py
(+71 files in other folders)
